base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api
  labels:
    app: app-api
    deployment: app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-api
  template:
    metadata:
      labels:
        app: app-api
        deployment: app-api
    spec:
      containers:
        - name: app-api
          image: app-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 512Mi
