base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-api
  labels:
    app: app-api
spec:
  selector:
    app: app-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
