base/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-api
  name: app-api
spec:
  to:
    kind: Service
    name: app-api
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
